--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <p>A chat program which passes the Turing Test. The criteria for passing is vague, so the exact standards for passing are unclear, but it scored an impressive rankingof 59.3% human at the 2011 Techniche Festival in India.</p>
         </div>
         <div id="slide3" class="step slide" data-x="500" data-y="-5700">
-            <img src="http://www.cleverbot.com/images/app/cleverbot_app_iphone_2.jpg" style="Height:60%;margin:0 auto" />
+            <img src="http://www.cleverbot.com/images/app/cleverbot_app_iphone_2.jpg" style="Height:70%;margin:0 auto" />
             <h1>The video demonstrates how Cleverbot can immitate personality. It shows two Cleverbot's having a conversation that while being awkward, also is emotional, deep and philosophical</h1>
         </div>
 
@@ -60,7 +60,7 @@
         </div>
         <div id="slide7" class="step slide" data-x="500" data-y="-2900">
             <iframe width="854" height="480" src="https://www.youtube.com/embed/vyQtgNRo8hU" frameborder="0" allowfullscreen></iframe>
-            <h1>Is the future AI? Clip from the movie "Ex Machina", predicting possible future of the Turing Test into Artificial intelligence</h1>
+            <h1>Is the future AI? Clip from the movie "Ex Machina", predicting the possible future of Turing Test into Artificial intelligence</h1>
         </div>
         <div id="slide8" class="step slide" data-x="500" data-y="-2200">
             <h1>Conclusion: Significant application for Business Technology Management</h1>
