--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
             <h1>Bibliography</h1>
             <p>Joshua Barrie. "Computers Are Writing Novels: Read A Few Samples Here." Business Insider. N.p., 27 Nov. 2014. Web. 03 Dec. 2015.</p>
             <p>Stromberg, Joseph. "Are You Chatting With a Human or a Computer?" Smithsonian. N.p., 21 June 2012. Web. 03 Dec. 2015. <http://www.smithsonianmag.com/science-nature/are-you-chatting-with-a-human-or-a-computer-131277499/?no-ist>.</p>
-
+            <p>"Is AI Good for Management?" Techbriefs. N.p., 21 Sept. 2015. Web. 4 Dec. 2015. <http%3A%2F%2Fwww.techbriefs.com%2Fcomponent%2Fcontent%2Farticle%2Fntb%2Finsider%2Fqotw%2F23011>.</p>
+            <p>Clairmont, Nicholas. "How Close Is the Turing Test to Being Beaten? | Big Think." Big Think. N.p., 23 June 2012. Web. 04 Dec. 2015.</p>
     <div class="hint">
         <p>Use a spacebar or arrow keys to navigate</p>
     </div>
