--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
         <div id="slide8" class="step slide" data-x="500" data-y="-2200">
             <h1>Conclusion: Significant application for Business Technology Management</h1>
-            <h1>For instance 1) Hitachi Ltd. said it has developed a new  artificial intelligence program that will enable robots to deliver instructions to employees based on analyses of big data and the workers’ routines. 2) Not just collecting relevent and usefull data for managers but changeing it thorugh a formulaic process into easy to read narrative format 3) Advancement in AI could make it a very usefull product to sell to consumers as personal assistents or replace services that are information intensive or repetitive, that does require new knowledge or creativity such as newspaper articles of similar events, blogs, accounting, Data analysis etc.</h1>
+            <h1>For instance<h1> <p>1) Hitachi Ltd. said it has developed a new  artificial intelligence program that will enable robots to deliver instructions to employees based on analyses of big data and the workers’ routines.</p><p> 2) Not just collecting relevent and usefull data for managers but aswell as changeing it through a formulaic process into easy to read narrative format</p><p> 3) Advancement in AI could make it a very usefull product to sell to consumers as personal assistents or replace services that are information intensive or repetitive, that does require new knowledge or creativity such as newspaper articles of similar events, blogs, accounting, Data analysis etc.</p>
         </div>
         <div id="slide9" class="step slide" data-x="500" data-y="-1500">
             <h1>Bibliography</h1>
